--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8' />
-    <title>Display a map</title>
+    <title>Edits visualiser</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
