#5, #7 added a combo box for projects

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <p></p>
         </div>
         <form id='QueryForm'>
+            <fieldset class = 'col6'>
+                <select id='projects' name="projects">
+                    <option value="0">HOTOSM Projects</option>
+                </select>
+            </fieldset>
             <fieldset class='col6'>
                 <label>From</label>
                 <input id='fromdate' type='datetime-local' placeholder='yyyy-MM-dd' />
